feat: first version of register and login. Things to improve...
