# backend/routes/api.php
@@ -6,9 +6,16 @@ use App\Http\Controllers\RoleController;
 use App\Http\Controllers\CourseController;
 use App\Http\Controllers\SubjectController;
 use App\Http\Controllers\UserController;
+use App\Http\Controllers\AuthenticatedSessionController;
+use App\Http\Controllers\RegisteredUserController;
+use Illuminate\Auth\Events\Authenticated;
 
 Route::resource('roles', RoleController::class);
 Route::resource('courses', CourseController::class);
 Route::resource('subjects', SubjectController::class);
 Route::resource('users', UserController::class);
+
+Route::post('/login', [AuthenticatedSessionController::class, 'login']);
+Route::post('/logout', [AuthenticatedSessionController::class, 'logout'])->middleware('auth:sanctum');
+Route::post('/register', [RegisteredUserController::class, 'store']);
 
